--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: default
 title:  'Welcome'
 ---
 
-<h1>Welcome to the realm of Tridentu Linux!</h1>
+<div class="hero fullscreen">
+  <h1>Welcome to the realm of Tridentu Linux!</h1>
+  <p class="lead">
+    Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
+  </p>
+</div>
 
-<p class="lead">
-  Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
-</p>
 
 
