--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title:  'Welcome'
 ---
 
-<div class="hero fullscreen">
+<div id="splash-img" class="hero fullscreen">
   <h1>Welcome to the realm of Tridentu Linux!</h1>
   <p class="lead">
     Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
