--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ title:  'Welcome'
 
 <div id="splash-img" class="hero fullscreen hero-img parallax-img">
   <div class="hero-body">
-    <h1>Welcome to the realm of Tridentu Linux!</h1>
-    <p class="lead">
-      Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
-    </p>
+    <div class="content">
+      <h1 class="title">Welcome to the realm of Tridentu Linux!</h1>
+      <p class="lead">
+        Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
+      </p>
+    </div>
   </div>
 </div>
 
