--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title:  'Welcome'
 <div id="splash-img" class="hero fullscreen hero-img parallax-img">
   <div class="hero-body">
     <div class="content">
-      <h1 class="uppercase white title">Welcome to the realm of Tridentu Linux!</h1>
-      <p class="lead">
+      <h1 class="uppercase white title">Welcome to Tridentu Linux!</h1>
+      <p class="uppercase white sub-title faded">
         Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
       </p>
     </div>
