--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ title:  'Welcome'
   <div class="hero-body">
     <div class="content">
       <h1 class="uppercase white title">Welcome to Tridentu Linux!</h1>
-      <p class="uppercase white sub-title faded">
+      <h3 class="uppercase white sub-title faded">
         Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
-      </p>
+      </h3>
     </div>
   </div>
 </div>
