--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ title:  'Welcome'
 
 <div class="row">
   <div class="col-4">
-    <div class="lead">
-      
-    </div>
+    <p class="uppercase title">Simple</p>
   </div>
     <div class="col-4">
       <div class="lead">
