--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@ title:  'Welcome'
 
 <div class="row">
   <div class="col-4">
-    <p class="uppercase title">Simple</p>
+    <div class="frame">
+      <div class="frame__header">
+       <p class="uppercase frame__title">Simple</p>
+      </div>
+      <div class="frame__body">
+        
+      </div>
+    </div>
   </div>
     <div class="col-4">
       <div class="lead">
