--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title:  'Welcome'
        <p class="uppercase frame__title">Simple</p>
       </div>
       <div class="frame__body">
-        
+        Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
       </div>
     </div>
   </div>
