--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title:  'Welcome'
   <div class="col-4">
     <div class="frame">
       <div class="frame__header">
-       <p class="uppercase frame__title">Simple</p>
+       <h3 class="uppercase frame__title">Simple</h3>
       </div>
       <div class="frame__body">
         Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
@@ -26,9 +26,15 @@ title:  'Welcome'
     </div>
   </div>
     <div class="col-4">
-      <div class="lead">
-        
+    <div class="frame">
+      <div class="frame__header">
+       <h3 class="uppercase frame__title">Bloat-free</p>
+        <p class="uppercase sub-title">To an extent</p>
       </div>
+      <div class="frame__body">
+        Anything that's optional (meaning not needed for Tridentu to be Tridentu) is packaged using Caravel - Tridentu's own package manager/format.
+      </div>
+    </div>
     </div>
 </div>
 
