--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title:  'Welcome'
     <div class="frame">
       <div class="frame__header">
        <h3 class="uppercase frame__title">Bloat-free</p>
-        <p class="uppercase sub-title">To an extent</p>
+        <p class="uppercase frame__subtitle">To an extent</p>
       </div>
       <div class="frame__body">
         Anything that's optional (meaning not needed for Tridentu to be Tridentu) is packaged using Caravel - Tridentu's own package manager/format.
