--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title:  'Welcome'
   <div class="col-4">
     <div class="frame">
       <div class="frame__header">
-       <h3 class="uppercase frame__title">Simple</h3>
+       <h6 class="uppercase frame__title">Simple</h6>
       </div>
       <div class="frame__body">
         Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
@@ -28,7 +28,7 @@ title:  'Welcome'
     <div class="col-4">
     <div class="frame">
       <div class="frame__header">
-       <h3 class="uppercase frame__title">Bloat-free</p>
+       <h6 class="uppercase frame__title">Bloat-free</h6>
         <p class="uppercase frame__subtitle">To an extent</p>
       </div>
       <div class="frame__body">
