--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title:  'Welcome'
     <div class="frame">
       <div class="frame__header">
        <h6 class="uppercase frame__title">Simple</h6>
+        <p class="uppercase frame__subtitle">And Effective</p>
       </div>
       <div class="frame__body">
         Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
