--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@ title:  'Welcome'
       </div>
     </div>
     </div>
+   <div class="col-4">
+    <div class="frame">
+      <div class="frame__header">
+       <h6 class="uppercase frame__title">Beautiful</h6>
+        <p class="uppercase frame__subtitle">With Nord</p>
+      </div>
+      <div class="frame__body">
+        ATrientu comes with beautiful, Nord-themed visuals - visuals that usually feel natural for the distro.
+      </div>
+    </div>
+    </div>
 </div>
 
 
