--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title:  'Welcome'
         <p class="uppercase frame__subtitle">With Nord</p>
       </div>
       <div class="frame__body">
-        ATrientu comes with beautiful, Nord-themed visuals - visuals that usually feel natural for the distro.
+        Tridentu comes with beautiful, Nord-themed visuals - visuals that usually feel natural for the distro.
       </div>
     </div>
     </div>
