--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title:  'Welcome'
 
 <div class="row">
   <div class="col-4">
-    <div class="frame">
+    <div class="frame hover-grow">
       <div class="frame__header">
        <h6 class="uppercase frame__title">Simple</h6>
         <p class="uppercase frame__subtitle">And Effective</p>
@@ -27,7 +27,7 @@ title:  'Welcome'
     </div>
   </div>
     <div class="col-4">
-    <div class="frame">
+    <div class="frame hover-grow">
       <div class="frame__header">
        <h6 class="uppercase frame__title">Bloat-free</h6>
         <p class="uppercase frame__subtitle">To an extent</p>
@@ -38,7 +38,7 @@ title:  'Welcome'
     </div>
     </div>
    <div class="col-4">
-    <div class="frame">
+    <div class="frame hover-grow">
       <div class="frame__header">
        <h6 class="uppercase frame__title">Beautiful</h6>
         <p class="uppercase frame__subtitle">With Nord</p>
