--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ title:  'Welcome'
   </div>
 </div>
 
+<div class="divider" data-content="Key Traits"></divider>
+
 <div class="row">
   <div class="col-4">
     <div class="frame hover-grow">
