--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@ title:  'Welcome'
     </div>
   </div>
 </div>
-<div class="row"></div>
-<div class="divider" data-content="Key Traits"></divider>
-<div class="row"></div>
+<div class="divider" data-content="Key Traits"></div>
 <div class="row">
   <div class="col-4">
     <div class="frame hover-grow">
