--- a/features.html
+++ b/features.html
@@ -4,3 +4,10 @@ title: 'Features'
 ---
 
 <h1 class="font-alt title my-20">Features</h1>
+<div class="row">
+  <div class="col-4">
+    <div class="card">
+      
+    </div>
+  </div>
+</div>
