--- a/features.html
+++ b/features.html
@@ -7,7 +7,9 @@ title: 'Features'
 <div class="row">
   <div class="col-4">
     <div class="card">
-      
+      <div class="card__container">
+        
+      </div>
     </div>
   </div>
 </div>
