--- a/features.html
+++ b/features.html
@@ -8,7 +8,7 @@ title: 'Features'
   <div class="col-4">
     <div class="card">
       <div class="card__container">
-        
+        <div class="card__image"></div>
       </div>
     </div>
   </div>
