--- a/features.html
+++ b/features.html
@@ -9,6 +9,7 @@ title: 'Features'
     <div class="card">
       <div class="card__container">
         <div class="card__image"></div>
+        <div class="card__title-container"><p class="title">Caravel Package Manager</p></div>
       </div>
     </div>
   </div>
