--- a/features.html
+++ b/features.html
@@ -9,7 +9,10 @@ title: 'Features'
     <div class="card">
       <div class="card__container">
         <div class="card__image"></div>
-        <div class="card__title-container"><p class="title">Caravel Package Manager</p></div>
+        <div class="card__title-container">
+          <p class="title">Caravel</p>
+          <p class="subtitle">Package Manager</p>
+        </div>
       </div>
     </div>
   </div>
