--- a/features.html
+++ b/features.html
@@ -14,6 +14,11 @@ title: 'Features'
           <p class="subtitle">Package Manager</p>
         </div>
       </div>
+      <div class="content">
+        <p>The Caravel Package Manager is a package manager specifcally built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting 
+          (for hooks and installation scripts), and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be pacakages too)
+          and more.</p>
+      </div>
     </div>
   </div>
 </div>
