--- a/features.html
+++ b/features.html
@@ -15,8 +15,8 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>The Caravel Package Manager is a package manager specifcally built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting 
-          (for hooks and installation scripts), and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be pacakages too)
+        <p>The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting 
+          (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be pacakages too)
           and more.</p>
       </div>
     </div>
