--- a/features.html
+++ b/features.html
@@ -16,7 +16,7 @@ title: 'Features'
       </div>
       <div class="content">
         <p>The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting 
-          (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be pacakages too)
+          (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be packages too)
           and more.</p>
       </div>
     </div>
