--- a/features.html
+++ b/features.html
@@ -20,5 +20,17 @@ title: 'Features'
           and more.</p>
       </div>
     </div>
+    <div class="card">
+      <div class="card__container">
+        <div class="card__image"></div>
+        <div class="card__title-container">
+          <p class="title">AppImage Support</p>
+          <p class="subtitle">Built-in featrure</p>
+        </div>
+      </div>
+      <div class="content">
+        <p>Tridentu Linux comes with AppImage support out of the box (like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder and (Caravel) package structure)</p>
+      </div>
+    </div>
   </div>
 </div>
