--- a/features.html
+++ b/features.html
@@ -20,6 +20,8 @@ title: 'Features'
           and more.</p>
       </div>
     </div>
+  </div>
+   <div class="col-4">
     <div class="card">
       <div class="card__container">
         <div class="card__image"></div>
