--- a/features.html
+++ b/features.html
@@ -8,7 +8,9 @@ title: 'Features'
   <div class="col-4">
     <div class="card">
       <div class="card__container">
-        <div class="card__image"></div>
+        <div class="card__image" style="background-image: url('images/caravel.png');">
+
+        </div>
         <div class="card__title-container">
           <p class="title">Caravel</p>
           <p class="subtitle">Package Manager</p>
