--- a/features.html
+++ b/features.html
@@ -26,7 +26,7 @@ title: 'Features'
    <div class="col-4">
     <div class="card">
       <div class="card__container">
-        <div class="card__image"></div>
+        <div class="card__image" style="background-image: url('images/AppImage.png');"></div>
         <div class="card__title-container">
           <p class="title">AppImage Support</p>
           <p class="subtitle">Built-in featrure</p>
