New feature: zsh

--- a/features.html
+++ b/features.html
@@ -29,11 +29,25 @@ title: 'Features'
         <div class="card__image" style="background-image: url('images/AppImage.png');"></div>
         <div class="card__title-container">
           <p class="title">AppImage Support</p>
-          <p class="subtitle">Built-in featrure</p>
+          <p class="subtitle">Built-in feature</p>
         </div>
       </div>
       <div class="content">
-        <p>Tridentu Linux comes with AppImage support out of the box (like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder and (Caravel) package structure)</p>
+        <p>Tridentu Linux comes with AppImage support out of the box (like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder)</p>
+      </div>
+    </div>
+  </div>
+   <div class="col-4">
+    <div class="card">
+      <div class="card__container">
+        <div class="card__image"></div>
+        <div class="card__title-container">
+          <p class="title">Nice Terminal Experience</p>
+          <p class="subtitle">Built-in feature</p>
+        </div>
+      </div>
+      <div class="content">
+        <p>For elegance and usability, Tridentu-R comes with ZSh by default. This allows for theming and simplistic plugin support (no omz used). Just add the plugins you want into the zipzsh/plugins folder and you're set. Also, removing the plugins is as easy as deleting them. </p>
       </div>
     </div>
   </div>
