--- a/features.html
+++ b/features.html
@@ -47,7 +47,7 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>For elegance and usability, Tridentu-R comes with ZSh by default. This allows for theming and simplistic plugin support (no omz used). Just add the plugins you want into the zipzsh/plugins folder and you're set. Also, removing the plugins is as easy as deleting them. </p>
+        <p>For elegance and usability, Tridentu-R comes with Zsh by default. This allows for theming and simplistic plugin support (no omz used). Just add the plugins you want into the zipzsh/plugins folder and you're set. Also, removing the plugins is as easy as deleting them. </p>
       </div>
     </div>
   </div>
