--- a/features.html
+++ b/features.html
@@ -33,7 +33,7 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>Tridentu Linux comes with AppImage support out of the box (like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder)</p>
+        <p>Tridentu Linux comes with AppImage support out of the box like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder)</p>
       </div>
     </div>
   </div>
