--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title:  'Welcome'
     <div class="content">
       <h1 class="uppercase white title">Welcome to Tridentu Linux!</h1>
       <h3 class="uppercase white sub-title faded">
-        Tridentu Linux is a Linux Distro made from scratch for the terminal - all while looking good doing it.
+        Tridentu Linux is a Linux Distro made from scratch for the terminal (and the desktop) - all while looking good doing it.
       </h3>
     </div>
   </div>
