--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ title:  'Welcome'
     </div>
     </div>
 </div>
-
+<div class="row">
+  <div class="col-4"></div>
+  <div class="col-4">
+    <a class="text-blue-600 bg-blue-100 btn-large" href="/features">View Features</a>
+  <div>
+  <div class="col-4"></div>
+</div>
 
 
