--- a/index.html
+++ b/index.html
@@ -50,11 +50,17 @@ title:  'Welcome'
     </div>
 </div>
 <div class="row">
-  <div class="col-4"></div>
   <div class="col-4">
-    <a class="text-blue-600 bg-blue-100 btn-large" href="/features">View Features</a>
-  <div>
-  <div class="col-4"></div>
+    <div class="hero bg-blue-600">
+      <div class="hero-body">
+        <div class="content">
+          <h2 class="title white">Not convinced?</h2>
+          <h5 class="subtitle text-gray-300">Check out the features for more on this OS.</h5>
+
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
