Add Features button

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ title:  'Welcome'
     </div>
 </div>
 <div class="row">
-  <div class="col-4">
+  <div class="col-12">
     <div class="hero bg-blue-600">
       <div class="hero-body">
         <div class="content">
           <h2 class="title white">Not convinced?</h2>
           <h5 class="subtitle text-gray-300">Check out the features for more on this OS.</h5>
-
+          <a href="/features" class="btn btn-animated u-absolute" style="top: 50%; right: 0px;">View Features</a>
         </div>
       </div>
     </div>
