--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title:  'Welcome'
         <div class="content">
           <h2 class="title white">Not convinced?</h2>
           <h5 class="subtitle text-gray-300">Check out the features for more on this OS.</h5>
-          <a href="/features" class="btn btn-animated u-absolute" style="top: 50%; right: 0px;">View Features</a>
+          <a href="/features" class="btn btn-animated">View Features</a>
         </div>
       </div>
     </div>
