Feature Replacement: Desktop

--- a/features.html
+++ b/features.html
@@ -42,13 +42,12 @@ title: 'Features'
       <div class="card__container">
         <div class="card__image"></div>
         <div class="card__title-container">
-          <p class="title">Nice Terminal Experience</p>
+          <p class="title">Elegant Desktop</p>
           <p class="subtitle">Built-in feature</p>
         </div>
       </div>
       <div class="content">
-        <p>For elegance and usability, Tridentu-R comes with Zsh by default. This allows for theming and simplistic plugin support (no omz used). Just add the plugins you want into the zipzsh/plugins folder and you're set. Also, removing the plugins is as easy as deleting them. </p>
-      </div>
+        <p>For elegance and usability, Tridentu-R comes with many tools (for making this possible) by default. This allows for elegant theming of the KDE Desktop. It also maintains a Tridentu-RT (AwesomeWM-based Mast DE)/MacOS look and (to an extent) feel.</p>
     </div>
   </div>
 </div>
