--- a/features.html
+++ b/features.html
@@ -40,7 +40,7 @@ title: 'Features'
    <div class="col-4">
     <div class="card">
       <div class="card__container">
-        <div class="card__image"></div>
+        <div class="card__image" style="background-image: url('images/overview.png');"></div>
         <div class="card__title-container">
           <p class="title">Elegant Desktop</p>
           <p class="subtitle">Built-in feature</p>
