--- a/features.html
+++ b/features.html
@@ -50,4 +50,17 @@ title: 'Features'
         <p>For elegance and usability, Tridentu-R comes with many tools (for making this possible) by default. This allows for elegant theming of the KDE Desktop. It also maintains a Tridentu-RT (AwesomeWM-based Mast DE)/MacOS look and (to an extent) feel.</p>
     </div>
   </div>
+  <div class="col-4">
+    <div class="card">
+      <div class="card__container">
+        <div class="card__image" style="background-image: url('images/documents.png');"> </div>
+        <div class="card__title-container">
+          <p class="title">Documented</p>
+          <p class="subtitle">Built-in feature</p>
+        </div>
+      </div>
+      <div class="content">
+        <p>Tridentu-RK takes advantage of the KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
+    </div>
+  </div>
 </div>
