--- a/features.html
+++ b/features.html
@@ -50,7 +50,9 @@ title: 'Features'
         <p>For elegance and usability, Tridentu-R comes with many tools (for making this possible) by default. This allows for elegant theming of the KDE Desktop. It also maintains a Tridentu-RT (AwesomeWM-based Mast DE)/MacOS look and (to an extent) feel.</p>
     </div>
   </div>
-  <div class="col-4">
+</div>
+<div class="row">
+<div class="col-4">
     <div class="card">
       <div class="card__container">
         <div class="card__image" style="background-image: url('images/documents.png');"> </div>
