Updated feature style

--- a/features.html
+++ b/features.html
@@ -3,7 +3,7 @@ layout: default
 title: 'Features'
 ---
 
-<h1 class="font-alt title my-20">Features</h1>
+<h1 class="font-alt title my-20 u-text-center">Features</h1>
 <div class="row">
   <div class="col-4">
     <div class="card">
@@ -62,7 +62,7 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>Tridentu-RK takes advantage of the KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
+        <p>Tridentu-RK takes advantage of KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
     </div>
   </div>
 </div>
