--- a/features.html
+++ b/features.html
@@ -52,7 +52,7 @@ title: 'Features'
   </div>
 </div>
 <div class="row">
-<div class="col-4">
+  <div class="col-4">
     <div class="card">
       <div class="card__container">
         <div class="card__image" style="background-image: url('images/documents.png');"> </div>
@@ -63,6 +63,19 @@ title: 'Features'
       </div>
       <div class="content">
         <p>Tridentu-RK takes advantage of KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="card">
+      <div class="card__container">
+        <div class="card__image" style="background-image: url('images/flatpak.png');"> </div>
+        <div class="card__title-container">
+          <p class="title">Flatpak</p>
+          <p class="subtitle">Package Manager</p>
+        </div>
+      </div>
+      <div class="content">
+        <p>Tridentu-RK has flatpack support out of the box. This also means that you have better control over what resides on your system -  something that the CMR (Caravel Main Repository) could barely give you.</p>
     </div>
   </div>
 </div>
