--- a/features.html
+++ b/features.html
@@ -65,6 +65,7 @@ title: 'Features'
         <p>Tridentu-RK takes advantage of KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
     </div>
   </div>
+  </div>
   <div class="col-4">
     <div class="card">
       <div class="card__container">
@@ -77,5 +78,6 @@ title: 'Features'
       <div class="content">
         <p>Tridentu-RK has flatpack support out of the box. This also means that you have better control over what resides on your system -  something that the CMR (Caravel Main Repository) could barely give you.</p>
     </div>
+  </div>
   </div>
 </div>
