--- a/features.html
+++ b/features.html
@@ -71,8 +71,8 @@ title: 'Features'
       <div class="card__container">
         <div class="card__image" style="background-image: url('images/flatpak.png');"> </div>
         <div class="card__title-container">
-          <p class="title">Flatpak</p>
-          <p class="subtitle">Package Manager</p>
+          <p class="title text-black">Flatpak</p>
+          <p class="subtitle text-black">Package Manager</p>
         </div>
       </div>
       <div class="content">
