--- a/features.html
+++ b/features.html
@@ -57,8 +57,8 @@ title: 'Features'
       <div class="card__container">
         <div class="card__image" style="background-image: url('images/documents.png');"> </div>
         <div class="card__title-container">
-          <p class="title">Documented</p>
-          <p class="subtitle">Built-in feature</p>
+          <p class="title text-black">Documented</p>
+          <p class="subtitle text-black">Built-in feature</p>
         </div>
       </div>
       <div class="content">
@@ -71,8 +71,8 @@ title: 'Features'
       <div class="card__container">
         <div class="card__image" style="background-image: url('images/flatpak.png');"> </div>
         <div class="card__title-container">
-          <p class="title text-black">Flatpak</p>
-          <p class="subtitle text-black">Package Manager</p>
+          <p class="title">Flatpak</p>
+          <p class="subtitle">Package Manager</p>
         </div>
       </div>
       <div class="content">
