--- a/features.html
+++ b/features.html
@@ -76,7 +76,21 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>Tridentu-RK has flatpack support out of the box. This also means that you have better control over what resides on your system -  something that the CMR (Caravel Main Repository) could barely give you.</p>
+        <p>Tridentu-RK has Flatpak support out of the box. This also means that you have better control over what resides on your system - something that the CMR (Caravel Main Repository) could barely give you.</p>
+    </div>
+  </div>
+  </div>
+    <div class="col-4">
+    <div class="card">
+      <div class="card__container">
+        <div class="card__image" style="background-image: url('images/wine.png');"> </div>
+        <div class="card__title-container">
+          <p class="title">Wine</p>
+          <p class="subtitle">Built-in feature</p>
+        </div>
+      </div>
+      <div class="content">
+        <p>Tridentu-RK has Wine support out of the box. This  means that you can run Windows apps from you system. </p>
     </div>
   </div>
   </div>
