--- a/index.html
+++ b/index.html
@@ -62,5 +62,10 @@ title:  'Welcome'
     </div>
   </div>
 </div>
+<div class="hero">
+  <div class="hero-body">
+    <h2 class="content text-black">Blog</h2>
+  </div>
+</div>
 
 
