--- a/index.html
+++ b/index.html
@@ -64,8 +64,32 @@ title:  'Welcome'
 </div>
 <div class="hero">
   <div class="hero-body">
-    <h2 class="content text-black">Blog</h2>
+    <h2 class="content text-black u-text-center">Blog</h2>
   </div>
 </div>
-
+<div class="row">
+{% for post in paginator.posts %}
+   <div class="col-4">
+      <div class="card slide-up">
+        <div class="card__container">
+          <a href="{{ post.url }}" class="card__image link-dark"></a>
+        </div>
+        <div class="card__mobile-title">
+            <div class="content">
+                <div class="tile">
+                    <div class="tile__container">
+                        <p class="tile__title">{{ post.title }}</p>
+                        <p class="tile__subtitle">By {{ post.author }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <div class="card__body content">
+            <p>{{ post.excerpt }}</p>
+        </div>
+        <div class="card__footer content">{{ post.date }}</div>
+      <div>
+   </div>
+{% endfor %}
+</div>
 
