--- a/index.html
+++ b/index.html
@@ -91,5 +91,33 @@ title:  'Welcome'
       <div>
    </div>
 {% endfor %}
+
 </div>
 
+<div class="row">
+  <div class="pagination no-bullets">
+
+      <div class="pagination-item pagination-prev">
+          {% if paginator.previous_page %}
+                <a href="{{ paginator.previous_page_path }}" class="u-block">
+                    <p class="pagination-item-subtitle">Previous</p>
+                    <h5 class="m-0">Choose Items</h5>
+                </a>
+          {% else %}
+                <span class="pagination-item-subtitle u-block">Previous</span>
+          {% endif %}
+
+      </div>
+      <span>Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+      <div class="pagination-item pagination-next">
+        {% if paginator.previous_page %}
+              <a href="{{ paginator.next_page_path }}" class="u-block">
+                  <p class="pagination-item-subtitle">Next</p>
+                  <h5 class="m-0">Read</h5>
+              </a>
+        {% else %}
+              <span class="pagination-item-subtitle u-block">Next</span>
+        {% endif %}
+    </div>
+  </div>
+</div>
