--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title:  'Welcome'
    <div class="col-4">
       <div class="card slide-up">
         <div class="card__container">
-          <a href="{{ post_url }}" class="card__image link-dark"></a>
+          <a href="{{ post_url }}" class="card__image blue-800"></a>
         </div>
         <div class="card__mobile-title">
             <div class="content">
