--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title:  'Welcome'
    <div class="col-4">
       <div class="card slide-up">
         <div class="card__container">
-          <a href="{{ post_url }}" class="card__image blue-800"></a>
+          <a href="{{ post_url }}" class="card__image u-blue-800"></a>
         </div>
         <div class="card__mobile-title">
             <div class="content">
@@ -97,7 +97,6 @@ title:  'Welcome'
 <div class="row">
 <div clas="col-4">
   <div class="pagination no-bullets">
-
       <div class="pagination-item pagination-prev">
           {% if paginator.previous_page %}
                 <a href="{{ paginator.previous_page_path }}" class="u-block">
