--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ title:  'Welcome'
         <div class="card__footer content">{{ post.date | date_to_string: "ordinal", "US"  }}</div>
       <div>
    </div>
+   </div>
+   </div>
 {% endfor %}
 
 </div>
