--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ title:  'Welcome'
 {% endfor %}
 
 </div>
-
+<div class="row">
+  <div class="col-12">
   <div class="pagination no-bullets">
       <div class="pagination-item pagination-prev">
           {% if paginator.previous_page %}
@@ -119,5 +120,6 @@ title:  'Welcome'
               <span class="pagination-item-subtitle u-block">Next</span>
         {% endif %}
     </div>
+  </div>
   </div>
   </div>
