--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title:  'Welcome'
    <div class="col-4">
       <div class="card slide-up">
         <div class="card__container">
-          <a href="{{ post_url }}" class="card__image u-bg-blue-800"></a>
+          <a href="{{ post.url }}" class="card__image u-bg-blue-800"></a>
         </div>
         <div class="card__mobile-title">
             <div class="content">
@@ -109,7 +109,7 @@ title:  'Welcome'
           {% endif %}
 
       </div>
-      <span>Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+      <span class="u-block">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
       <div class="pagination-item pagination-next">
         {% if paginator.previous_page %}
               <a href="{{ paginator.next_page_path }}" class="u-block">
