--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title:  'Welcome'
    <div class="col-4">
       <div class="card slide-up">
         <div class="card__container">
-          <a href="{{ post.url }}" class="u-bg-blue-800"></a>
+          <a href="{{ post.url }}" class="card__image" style="background-color: #4643e2;"></a>
         </div>
         <div class="card__mobile-title">
             <div class="content">
