Change overview image

--- a/features.html
+++ b/features.html
@@ -47,7 +47,7 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>For elegance and usability, Tridentu-R comes with many tools (for making this possible) by default. This allows for elegant theming of the KDE Desktop. It also maintains a Tridentu-RT (AwesomeWM-based Mast DE)/MacOS look and (to an extent) feel.</p>
+        <p>For elegance and usability, Tridentu 2K comes with many tools (for making this possible) by default. This allows for elegant theming of the KDE Desktop. It also maintains a Tridentu-RT (AwesomeWM-based Mast DE)/MacOS look and (to an extent) feel.</p>
     </div>
   </div>
 </div>
