--- a/features.html
+++ b/features.html
@@ -47,7 +47,7 @@ title: 'Features'
         </div>
       </div>
       <div class="content">
-        <p>For elegance and usability, Tridentu 2K comes with many tools (for making this possible) by default. This allows for elegant theming of the Plasma 6 Desktop. It also maintains a Tridentu-RT (AwesomeWM-based Mast DE)/MacOS look and (to an extent) feel.</p>
+        <p>For elegance and usability, Tridentu 2K comes with an elegant and simple look and feel (similar to MacOS). If you want to change it, there are multiple tools for that.</p>
     </div>
   </div>
 </div>
