--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title:  'Welcome'
 		</div>
 
 		<div class="lc-block">
-			<div editable="rich">
+			<div>
 				<p class="lead">A Linux distro made from scratch for the desktop - all while looking good doing it.</p>
 
 			</div>
@@ -37,7 +37,8 @@ title:  'Welcome'
     </div>
   </div>
 </div>-->
-<div class="divider" data-content="Key Traits"></div>
+<div class="divider"></div>
+
 <div class="row">
   <div class="col-4">
     <div class="frame hover-grow">
