--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title:  'Welcome'
 
 <div class="row">
   <div class="col-4">
-    <div class="frame hover-grow">
+    <div class="card">
       <div class="frame__header">
        <h6 class="uppercase frame__title">Simple</h6>
         <p class="uppercase frame__subtitle">And Effective</p>
@@ -76,7 +76,7 @@ title:  'Welcome'
 </div>
 <div class="row">
   <div class="col-12">
-    <div class="hero bg-blue-600">
+    <div class="px-4 py-5 my-5 text-center">
       <div class="hero-body">
         <div class="content">
           <h2 class="title white">Not convinced?</h2>
