Fix features hero

--- a/index.html
+++ b/index.html
@@ -77,13 +77,9 @@ title:  'Welcome'
 <div class="row">
   <div class="col-12">
     <div class="px-4 py-5 my-5 text-center">
-      <div class="hero-body">
-        <div class="content">
-          <h2 class="title white">Not convinced?</h2>
+          <h1 class="display-5 fw-bold text-body-emphasis">Not convinced?</h1>
           <h5 class="subtitle text-gray-300">Check out the features for more on this OS.</h5>
           <a href="/features" class="btn btn-animated">View Features</a>
-        </div>
-      </div>
     </div>
   </div>
 </div>
