Fix features hero

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ title:  'Welcome'
   <div class="col-12">
     <div class="px-4 py-5 my-5 text-center">
           <h1 class="display-5 fw-bold text-body-emphasis">Not convinced?</h1>
-          <h5 class="subtitle text-gray-300">Check out the features for more on this OS.</h5>
+          <p class="lead mb-4">Check out the features for more on this OS.</p>
           <a href="/features" class="btn btn-animated">View Features</a>
     </div>
   </div>
