--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ title:  'Welcome'
     <div class="px-4 py-5 my-5 text-center">
           <h1 class="display-5 fw-bold text-body-emphasis">Not convinced?</h1>
           <p class="lead mb-4">Check out the features for more on this OS.</p>
-          <a href="/features" class="btn btn-animated">View Features</a>
+          <a href="/features" class="btn btn-primary">View Features</a>
     </div>
   </div>
 </div>
@@ -110,29 +110,20 @@ title:  'Welcome'
 
 </div>
 <div class="row">
-  <div class="col-12">
-  <div class="pagination no-bullets">
-      <div class="pagination-item pagination-prev">
-          {% if paginator.previous_page %}
-                <a href="{{ paginator.previous_page_path }}" class="u-block">
-                    <p class="pagination-item-subtitle">Previous</p>
-                    <h5 class="m-0">{{ paginator.page }} of {{ paginator.total_pages }}</h5>
-                </a>
-          {% else %}
-                <span class="pagination-item-subtitle u-block">Previous</span>
-          {% endif %}
-
-      </div>
-      <div class="pagination-item pagination-next">
-        {% if paginator.previous_page %}
-              <a href="{{ paginator.next_page_path }}" class="u-block">
-                  <p class="pagination-item-subtitle">Next</p>
-                  <h5 class="m-0">{{ paginator.page }} of {{ paginator.total_pages }}</h5>
-              </a>
-        {% else %}
-              <span class="pagination-item-subtitle u-block">Next</span>
-        {% endif %}
-    </div>
-  </div>
+  <nav class="col-12" aria-label="Pagination">
+    <ul class="pagination justify-content-center">
+      {% if paginator.previous_page %}
+          <li class="page-item"><a class="page-link" href="{{ paginator.previous_page_path }}">Previous</a></li>
+      {% else %}
+          <li class="page-item disabled"><a class="page-link">Previous</a></li>
+      {% endif %}
+      <li class="page-item"><a href="#" class="page-link">{{ paginator.page }} of {{ paginator.total_pages }}</a></li>
+      {% if paginator.next_page %}
+          <li class="page-item"><a class="page-link" href="{{ paginator.next_page_path }}">Next</a></li>
+      {% else %}
+          <li class="page-item disabled"><a class="page-link">Next</a></li>
+      {% endif %}
+    </ul>
+  </nav>
   </div>
   </div>
