--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ title:  'Welcome'
 </div>
 <div class="row">
 {% for post in paginator.posts %}
-   <div class="col-4">
-      <div class="card" style="width: 18rem;">
+   <div class="col-6">
+      <div class="card text-center">
         <div class="card__container">
           <img class="card-image top" style="background-color: #4643e2;"></a>
         </div>
@@ -100,12 +100,10 @@ title:  'Welcome'
                   {{ post.title }} By {{ post.author }}
             </h5>
             <p class="card-text">{{ post.excerpt }}</p>
-            <a href="{{ post.url }}" class="btn btn-primary"></a>
+            <a href="{{ post.url }}" class="btn btn-primary">Read More</a>
         </div>
-        <div class="card__footer content">{{ post.date | date_to_string: "ordinal", "US"  }}</div>
-      <div>
-   </div>
-   </div>
+          <div class="card-footer text-body-secondary">{{ post.date | date_to_string: "ordinal", "US"  }}</div>
+      </div>
    </div>
 {% endfor %}
 
