--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ title:  'Welcome'
     </div>
   </div>
 </div>
-<div class="hero">
-  <div class="hero-body">
-    <h2 class="content text-black u-text-center">Blog</h2>
+<div class="row">
+  <div class="col-12">
+    <h2 class="content text-black text-center">Blog</h2>
   </div>
 </div>
 <div class="row">
@@ -124,5 +124,4 @@ title:  'Welcome'
       {% endif %}
     </ul>
   </nav>
-  </div>
-  </div>
+</div>
