--- a/features.html
+++ b/features.html
@@ -6,50 +6,37 @@ title: 'Features'
 <h1 class="font-alt title my-20 u-text-center">Features</h1>
 <div class="row">
   <div class="col-4">
-    <div class="card">
-      <div class="card__container">
-        <div class="card__image" style="background-image: url('images/caravel.png');">
-
-        </div>
-        <div class="card__title-container">
-          <p class="title">Caravel</p>
-          <p class="subtitle">Package Manager</p>
-        </div>
-      </div>
-      <div class="content">
-        <p>The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting 
+  <div class="card mb-3">
+    <img src="images/caravel.png" class="card-img-top" alt="Caravel in action">
+    <div class="card-body">
+      <h5 class="card-title">Caravel</h5>
+      <p class="card-text">The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting
           (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be packages too)
           and more.</p>
-      </div>
+      <p class="card-text"><small class="text-body-secondary">Package Manager</small></p>
     </div>
   </div>
-   <div class="col-4">
-    <div class="card">
-      <div class="card__container">
-        <div class="card__image" style="background-image: url('images/AppImage.png');"></div>
-        <div class="card__title-container">
-          <p class="title">AppImage Support</p>
-          <p class="subtitle">Built-in feature</p>
-        </div>
-      </div>
-      <div class="content">
-        <p>Tridentu Linux comes with AppImage support out of the box like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder)</p>
-      </div>
+  </div>
+    <div class="col-4">
+  <div class="card mb-3">
+    <img src="images/AppImage.png" class="card-img-top" alt="Caravel in action">
+    <div class="card-body">
+      <h5 class="card-title">AppImage Support</h5>
+      <p class="card-text">Tridentu Linux comes with AppImage support out of the box like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder).</p>
+      <p class="card-text"><small class="text-body-secondary">Built-in feature</small></p>
     </div>
   </div>
-   <div class="col-4">
-    <div class="card">
-      <div class="card__container">
-        <div class="card__image" style="background-image: url('images/overview.png');"> </div>
-        <div class="card__title-container">
-          <p class="title">Elegant Desktop</p>
-          <p class="subtitle">Built-in feature</p>
-        </div>
-      </div>
-      <div class="content">
-        <p>For elegance and usability, Tridentu 2K comes with an elegant and simple look and feel (similar to MacOS). If you want to change it, there are multiple tools for that.</p>
+  </div>
+  <div class="col-4">
+ <div class="card mb-3">
+    <img src="images/AppImage.png" class="card-img-top" alt="Caravel in action">
+    <div class="card-body">
+      <h5 class="card-title">Elegant Desktop</h5>
+      <p class="card-text">For elegance and usability, Tridentu 2K comes with an elegant and simple look and feel (similar to MacOS). If you want to change it, there are multiple tools for that.</p>
+      <p class="card-text"><small class="text-body-secondary">Built-in feature</small></p>
     </div>
   </div>
+</div>
 </div>
 <div class="row">
   <div class="col-4">
