--- a/features.html
+++ b/features.html
@@ -19,7 +19,7 @@ title: 'Features'
   </div>
     <div class="col-4">
   <div class="card mb-3">
-    <img src="images/AppImage.png" class="card-img-top" alt="Caravel in action">
+    <img src="images/AppImage.png" class="card-img-top" alt="An AppImage in action on Tridentu 2.">
     <div class="card-body">
       <h5 class="card-title">AppImage Support</h5>
       <p class="card-text">Tridentu Linux comes with AppImage support out of the box like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder).</p>
@@ -29,7 +29,7 @@ title: 'Features'
   </div>
   <div class="col-4">
  <div class="card mb-3">
-    <img src="images/AppImage.png" class="card-img-top" alt="Caravel in action">
+    <img src="images/overview.png" class="card-img-top" alt="Tridentu 2K Light theme overview">
     <div class="card-body">
       <h5 class="card-title">Elegant Desktop</h5>
       <p class="card-text">For elegance and usability, Tridentu 2K comes with an elegant and simple look and feel (similar to MacOS). If you want to change it, there are multiple tools for that.</p>
@@ -39,6 +39,18 @@ title: 'Features'
 </div>
 </div>
 <div class="row">
+ <div class="col-4">
+  <div class="card mb-3">
+    <img src="images/documents.png" class="card-img-top" alt="Caravel in action">
+    <div class="card-body">
+      <h5 class="card-title">Caravel</h5>
+      <p class="card-text">The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting
+          (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be packages too)
+          and more.</p>
+      <p class="card-text"><small class="text-body-secondary">Package Manager</small></p>
+    </div>
+  </div>
+  </div>
   <div class="col-4">
     <div class="card">
       <div class="card__container">
