--- a/features.html
+++ b/features.html
@@ -40,13 +40,21 @@ title: 'Features'
 </div>
 <div class="row">
  <div class="col-4">
-  <div class="card mb-3">
-    <img src="images/documents.png" class="card-img-top" alt="Caravel in action">
+ <div class="card mb-3">
+    <img src="images/overview.png" class="card-img-top" alt="Tridentu 2K Light theme overview">
     <div class="card-body">
-      <h5 class="card-title">Caravel</h5>
-      <p class="card-text">The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting
-          (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be packages too)
-          and more.</p>
+      <h5 class="card-title">Elegant Desktop</h5>
+      <p class="card-text">For elegance and usability, Tridentu 2K comes with an elegant and simple look and feel (similar to MacOS). If you want to change it, there are multiple tools for that.</p>
+      <p class="card-text"><small class="text-body-secondary">Built-in feature</small></p>
+    </div>
+  </div>
+</div>
+ <div class="col-4">
+  <div class="card mb-3">
+    <img src="images/flatpak.png" class="card-img-top" alt="Flatpak support in Discover">
+    <div class="card-body">
+      <h5 class="card-title">Flatpak</h5>
+      <p class="card-text">Tridentu-2K has Flatpak support out of the box. This also means that you have better control over what resides on your system - something that the CMR (Caravel Main Repository) could barely give you.</p>
       <p class="card-text"><small class="text-body-secondary">Package Manager</small></p>
     </div>
   </div>
@@ -65,21 +73,7 @@ title: 'Features'
     </div>
   </div>
   </div>
-  <div class="col-4">
-    <div class="card">
-      <div class="card__container">
-        <div class="card__image" style="background-image: url('images/flatpak.png');"> </div>
-        <div class="card__title-container">
-          <p class="title">Flatpak</p>
-          <p class="subtitle">Package Manager</p>
-        </div>
-      </div>
-      <div class="content">
-        <p>Tridentu-RK has Flatpak support out of the box. This also means that you have better control over what resides on your system - something that the CMR (Caravel Main Repository) could barely give you.</p>
-    </div>
-  </div>
-  </div>
-  <div class="col-4">
+   <div class="col-4">
     <div class="card">
         <div class="card__container">
           <div class="card__image" style="background-image: url('images/wine.png');"> </div>
