--- a/features.html
+++ b/features.html
@@ -22,7 +22,7 @@ title: 'Features'
     <img src="images/AppImage.png" class="card-img-top" alt="An AppImage in action on Tridentu 2.">
     <div class="card-body">
       <h5 class="card-title">AppImage Support</h5>
-      <p class="card-text">Tridentu Linux comes with AppImage support out of the box like most distros. But there's more. It features not only support, but extensively features it too (with a dedicated folder).</p>
+      <p class="card-text">Tridentu Linux comes with AppImage support out of the box like most distros. But there's more. It features not only support, but extensively features it too (a dedicated folder and launcher widget to be precise).</p>
       <p class="card-text"><small class="text-body-secondary">Built-in feature</small></p>
     </div>
   </div>
@@ -39,16 +39,6 @@ title: 'Features'
 </div>
 </div>
 <div class="row">
- <div class="col-4">
- <div class="card mb-3">
-    <img src="images/overview.png" class="card-img-top" alt="Tridentu 2K Light theme overview">
-    <div class="card-body">
-      <h5 class="card-title">Elegant Desktop</h5>
-      <p class="card-text">For elegance and usability, Tridentu 2K comes with an elegant and simple look and feel (similar to MacOS). If you want to change it, there are multiple tools for that.</p>
-      <p class="card-text"><small class="text-body-secondary">Built-in feature</small></p>
-    </div>
-  </div>
-</div>
  <div class="col-4">
   <div class="card mb-3">
     <img src="images/flatpak.png" class="card-img-top" alt="Flatpak support in Discover">
