--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ title:  'Welcome'
     <h2 class="content text-black text-center">Blog</h2>
   </div>
 </div>
-<div class="row my-6">
+<div class="row py-6">
 {% for post in paginator.posts %}
    <div class="col-6">
       <div class="card text-center">
