--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ title:  'Welcome'
 {% endfor %}
 
 </div>
+<div class="row py-6">
+</div
 <div class="row">
   <nav class="col-12" aria-label="Pagination">
     <ul class="pagination justify-content-center">
