Padding for blog (Fix)

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ title:  'Welcome'
 
 </div>
 <div class="row py-6">
-</div
+</div>
 <div class="row">
   <nav class="col-12" aria-label="Pagination">
     <ul class="pagination justify-content-center">
