Padding for blog (Fix)

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ title:  'Welcome'
 {% endfor %}
 
 </div>
-<div class="row py-6">
+<div class="row mt-6">
 </div>
 <div class="row">
   <nav class="col-12" aria-label="Pagination">
