Padding for blog (Fix) + Typo in first article

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ title:  'Welcome'
     <h2 class="content text-black text-center">Blog</h2>
   </div>
 </div>
-<div class="row py-6">
+<div class="row">
 {% for post in paginator.posts %}
    <div class="col-6">
       <div class="card text-center">
@@ -108,7 +108,7 @@ title:  'Welcome'
 {% endfor %}
 
 </div>
-<div class="row mt-6">
+<div class="row mt-5">
 </div>
 <div class="row">
   <nav class="col-12" aria-label="Pagination">
