Fix arrow button

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ title:  'Welcome'
 		</div>
 
 		<div class="d-block">
-			<svg onclick="this.closest('.row').nextElementSibling.scrollIntoView({ behavior: 'smooth'  });" width="4em" height="4em" viewBox="0 0 16 16" class="text-light" fill="currentColor" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon">
+			<a href="#blog-title"><svg  width="4em" height="4em" viewBox="0 0 16 16" class="text-light" fill="currentColor" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon">
 				<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
 				<path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"></path>
 			</svg>
-
+          </a>
 		</div>
 	</div>
 </div>
@@ -85,7 +85,7 @@ title:  'Welcome'
 </div>
 <div class="row">
   <div class="col-12">
-    <h2 class="content text-black text-center">Blog</h2>
+    <h2 class="content text-black text-center" id="blog-title">Blog</h2>
   </div>
 </div>
 <div class="row">
