--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@ title:  'Welcome'
 </div>-->
 <div class="divider"></div>
 
-<div class="row">
+<div class="row mt-3">
   <div class="col-4">
     <div class="card">
-      <div class="frame__header">
-       <h6 class="uppercase frame__title">Simple</h6>
-        <p class="uppercase frame__subtitle">And Effective</p>
-      </div>
-      <div class="frame__body">
+       <h6 class="card-title">Simple and effective</h6>
+      <div class="card-bodybody">
         Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
       </div>
     </div>
