Summary features redo

--- a/index.html
+++ b/index.html
@@ -42,17 +42,16 @@ title:  'Welcome'
 <div class="row mt-3">
   <div class="col-4">
     <div class="card">
-       <h6 class="card-title">Simple and effective</h6>
-      <div class="card-bodybody">
+       <h6 class="card-header text-uppercase">Simple and effective</h6>
+      <div class="card-body">
         Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
       </div>
     </div>
   </div>
     <div class="col-4">
-    <div class="frame hover-grow">
-      <div class="frame__header">
-       <h6 class="uppercase frame__title">Bloat-free</h6>
-        <p class="uppercase frame__subtitle">To an extent</p>
+    <div class="card">
+      <div class="card-header">
+       <h6 class="card-title text-uppercase">Semi-minimal</h6>
       </div>
       <div class="frame__body">
         Anything that's optional (meaning not needed for Tridentu to be Tridentu) is packaged using Caravel - Tridentu's own package manager/format.
