--- a/index.html
+++ b/index.html
@@ -50,21 +50,16 @@ title:  'Welcome'
   </div>
     <div class="col-4">
     <div class="card">
-      <div class="card-header">
-       <h6 class="card-title text-uppercase">Semi-minimal</h6>
-      </div>
+      <h6 class="card-header text-uppercase">Semi-minimal</h6>
       <div class="frame__body">
         Anything that's optional (meaning not needed for Tridentu to be Tridentu) is packaged using Caravel - Tridentu's own package manager/format.
       </div>
     </div>
     </div>
    <div class="col-4">
-    <div class="frame hover-grow">
-      <div class="frame__header">
-       <h6 class="uppercase frame__title">Beautiful</h6>
-        <p class="uppercase frame__subtitle">With Nord</p>
-      </div>
-      <div class="frame__body">
+    <div class="card">
+       <h6 class="text-uppercase card-header">Beautiful</h6>
+      <div class="card-body">
         Tridentu comes with beautiful, Nord-themed visuals - visuals that usually feel natural for the distro.
       </div>
     </div>
